feat: rush